@@ -1,5 +1,5 @@
 Python-GLFW : Yet another GLFW wrapper for Python
-Copyright (c) 2017 vaiorabbit <http://twitter.com/vaiorabbit>
+Copyright (c) 2017-2019 vaiorabbit <http://twitter.com/vaiorabbit>
 
 This software is provided 'as-is', without any express or implied
 warranty. In no event will the authors be held liable for any damages
